fixed icon bug on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -91,9 +91,11 @@ h5,
 h6 {
   overflow-wrap: break-word;
 }
-/*
-    8. Create a root stacking context
-  */
+
+/* 8. Remove highlight on click for mobile */
+* {
+  -webkit-tap-highlight-color: transparent;
+}
 
 /* transitions */
 .slideIn-enter {
